--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,13 @@ edition = "2021"
 askama = { version = "0.12.1", features = ["with-axum"] }
 askama_axum = "0.3.0"
 axum = "0.6.20"
+chrono = { version = "0.4.31", features = ["serde"] }
 color-eyre = "0.6.2"
 serde = { version = "1.0.190", features = ["derive"] }
 serde_json = "1.0.108"
+sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "chrono"] }
 tokio = { version = "1.33.0", features = ["full"] }
 tower-http = { version = "0.4.4", features = ["fs", "trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.17"
+uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
