--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,11 @@ edition = "2021"
 askama = { version = "0.12.1", features = ["with-axum"] }
 askama_axum = "0.3.0"
 axum = "0.6.20"
+axum-extra = { version = "0.8.0", features = ["cookie"] }
 chrono = { version = "0.4.31", features = ["serde"] }
 color-eyre = "0.6.2"
+dotenv = "0.15.0"
+jsonwebtoken = "9.1.0"
 serde = { version = "1.0.190", features = ["derive"] }
 serde_json = "1.0.108"
 sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "chrono"] }
@@ -18,4 +21,4 @@ tokio = { version = "1.33.0", features = ["full"] }
 tower-http = { version = "0.4.4", features = ["fs", "trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.17"
-uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
+uuid = { version = "1.5.0", features = ["v4", "fast-rng", "serde"] }
