--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "rust-chatbot-api",
   "module": "index.js",
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "bun-types": "latest",
+    "daisyui": "^3.9.4",
     "tailwindcss": "^3.3.5"
   },
   "peerDependencies": {
