--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "bun-types": "latest",
+    "concurrently": "^8.2.2",
     "daisyui": "^3.9.4",
     "tailwindcss": "^3.3.5"
   },
@@ -11,7 +12,9 @@
     "typescript": "^5.0.0"
   },
   "scripts": {
-    "tw:watch": "tailwindcss -i ./styles/tailwind.css -o ./assets/main.css --watch"
+    "tw:watch": "tailwindcss -i ./styles/tailwind.css -o ./assets/main.css --watch",
+    "cargo:watch": "cargo watch -x 'run --bin rust-chatbot-api'",
+    "dev": "concurrently \"bun run tw:watch\" \"bun run cargo:watch\""
   },
   "type": "module"
 }
