--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
   },
   "files.associations": {
     "*.css": "tailwindcss"
-  }
+  },
+  "files.autoSave": "afterDelay",
+  "files.autoSaveDelay": 1000,
+  "rust-analyzer.checkOnSave": true
 }
