--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ tower-http = { version = "0.4.4", features = ["fs", "trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.17"
 uuid = { version = "1.5.0", features = ["v4", "fast-rng", "serde"] }
+validator = { version = "0.16.1", features = ["derive"] }
