--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ jsonwebtoken = "9.1.0"
 serde = { version = "1.0.190", features = ["derive"] }
 serde_json = "1.0.108"
 sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "chrono"] }
+tera = "1.19.1"
 tokio = { version = "1.33.0", features = ["full"] }
 tower-http = { version = "0.4.4", features = ["fs", "trace"] }
 tracing = "0.1.40"
