--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,6 @@ tera = "1.19.1"
 tokio = { version = "1.33.0", features = ["full"] }
 tower-http = { version = "0.4.4", features = ["fs", "trace"] }
 tracing = "0.1.40"
-tracing-subscriber = "0.3.17"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
 uuid = { version = "1.5.0", features = ["v4", "fast-rng", "serde"] }
 validator = { version = "0.16.1", features = ["derive"] }
