--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rust-chatbot-api",
+  "name": "rust-web-starter",
   "module": "index.js",
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
@@ -13,10 +13,10 @@
   },
   "scripts": {
     "tw:watch": "tailwindcss -i ./styles/tailwind.css -o ./assets/main.css --watch",
-    "cargo:watch": "cargo watch -x 'run --bin rust-chatbot-api'",
+    "cargo:watch": "cargo watch -x 'run --bin rust-web-starter'",
     "dev": "concurrently \"bun run tw:watch\" \"bun run cargo:watch\"",
     "tw:build": "tailwindcss -i ./styles/tailwind.css -o ./assets/main.css",
-    "cargo:run": "cargo run --bin rust-chatbot-api",
+    "cargo:run": "cargo run --bin rust-web-starter",
     "start": "bun run tw:build && bun run cargo:run"
   },
   "type": "module"
